# prime-net-core

./: .gitignore  Cargo.toml  GEMINI.md  README.md  STATUS_REPORT.txt  build-gui.ps1  build.rs  check_output.txt  config.example.toml  dev-gui.ps1  justfile  socks5_server_verify.txt
.cargo/: config.example.toml  config.toml
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  CONFIG.md  EXECUTABLE.md  PRESETS.md  PRIVACY.md  QUICKSTART.md  README.md  SECURITY.md  TLS_FINGERPRINTING.md  TROUBLESHOOTING.md  USAGE_FFI.md  USAGE_SOURCE.md  USER_GUIDE.md
examples/: download_to_file.rs  simple_download.rs
examples/c_integration/: main.c
include/: prime_net.h
src/: engine.rs  error.rs  lib.rs  sse.rs  udp_tunnel.rs  version.rs
src/adblock/: config.rs  cosmetic.rs  dns_interceptor.rs  filter_engine.rs  filter_list.rs  filter_parser.rs  filter_rule.rs  mod.rs
src/anticensorship/: doh.rs  ech.rs  fronting.rs  mod.rs  reqwest_dns.rs  resolver_chain.rs  tls_randomizer.rs
src/blocklist/: mod.rs
src/config/: mod.rs
src/config/config_sections/: feature_defaults_and_builder.rs  types_and_base_defaults.rs  validation_and_compat.rs
src/core/: chunk_manager.rs  connection_pool.rs  download.rs  http_client.rs  mod.rs  proxy_helper.rs  request.rs  response_stream.rs
src/core/http_client/: http3.rs
src/core/http_client_parts/: chunked_download.rs  download_and_privacy.rs  request_pipeline.rs  transport_tls_fragmentation.rs
src/dns/: mod.rs  resolver.rs
src/dns/resolver_parts/: resolver_impl.rs  types_and_resolver.rs  upstream_parsing.rs
src/evasion/: dpi_bypass.rs  fragmenting_io.rs  mod.rs  profile_discovery.rs  quic_initial.rs  startup_report.rs  tcp_desync.rs  tls_parser.rs  traffic_shaping.rs
src/evasion/packet_intercept/: disorder.rs  mod.rs  nfqueue.rs  quic_bypass.rs  raw_inject.rs  windivert.rs  windivert_bootstrap.rs
src/ffi/: callbacks.rs  config_api.rs  event_callback.rs  header.rs  metrics_api.rs  mod.rs  socks5_control.rs
src/health/: mod.rs
src/observability/: mod.rs
src/pac/: mod.rs
src/platform/: diagnostics.rs  kill_switch.rs  linux.rs  macos.rs  mod.rs  ttl.rs  windows.rs
src/privacy/: cname_uncloaking.rs  cookie_policy.rs  dnt.rs  header_normalizer.rs  https_upgrade.rs  mod.rs  referer_policy.rs  tracker_blocker.rs
src/proxy/: http_proxy.rs  mod.rs  socks5.rs
src/pt/: direct.rs  mod.rs  shadowsocks.rs  socks5_server.rs  tor_client.rs  trojan.rs
src/pt/mtproto_ws/: handshake.rs  mod.rs  relay.rs
src/pt/socks5_server/: classifier_and_persistence.rs  evasion_tests.rs  isp_profiler.rs  ml_shadow.rs  mod.rs  protocol_handlers.rs  protocol_socks4.rs  protocol_udp.rs  relay_and_io_helpers.rs  route_connection.rs  route_scoring.rs  state_and_startup.rs  telemetry_aggregator.rs  tests.rs  thompson_sampling.rs
src/pt/socks5_server_parts/: classifier_and_persistence.rs  evasion_tests.rs  ml_shadow.rs  protocol_handlers.rs  protocol_socks4.rs  protocol_udp.rs  relay_and_io_helpers.rs  route_connection.rs  (+4 more)
src/telemetry/: connection_tracker.rs  mod.rs  tui_layer.rs
src/tls/: mod.rs
src/tui/: config_editor.rs  connection_monitor.rs  first_run_wizard.rs  help.rs  log_viewer.rs  mod.rs  privacy_dashboard.rs  privacy_headers.rs
src/updater/: mod.rs  rollback.rs  verification.rs
src/websocket/: mod.rs
tests/: basic_fetch.rs  download_to_path.rs  ffi_cancel_stress.rs  http3_live.rs  http3_local.rs  integration.rs  obfs4_live.rs  pt_trojan_local.rs  snowflake_live.rs  trojan_live.rs  udp_over_tcp.rs  websocket_dns_leak.rs
tests/integration/: blocklist_tests.rs  evasion_tests.rs  privacy_headers_tests.rs  proxy_tests.rs  test_cmd_tests.rs  tui_tests.rs  updater_tests.rs
wix/: main.wxs
(+5 files in other folders)
